<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tvVerificationMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_verify_phone_number" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_verification_code"
                android:inputType="textCapCharacters" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="3dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btVerify"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/label_button_verify"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.CardView>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_resend_verification"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>