<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="Kota"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="Lokasi Keberangkatan"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switchSpecialLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:switchPadding="8dp"
            android:text="@string/label_switch_specific_departure" />

        <TextView
            android:id="@+id/tvSpecialLocationInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_info_specific_departure_notice"
            android:textColor="@color/colorSecondaryText" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapDeparture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/ivMarkerDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:paddingBottom="32dp"
            android:src="@drawable/ic_place_black_24dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="3dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btSetDeparture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/label_button_set_departure"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.CardView>

    </FrameLayout>

</LinearLayout>